perf(core): pipeline batch admission completions